--- a/.travis.yml
+++ b/.travis.yml
@@ -45,5 +45,5 @@ jobs:
           fi
         - docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
         - make install
-        - make docker DOCKER_IMAGE_NAME=$DOCKER_IMAGE_NAME DOCKER_IMAGE_TAG=$DOCKER_IMAGE_TAG 2> /dev/null
+        - make docker DOCKER_IMAGE_NAME=$DOCKER_IMAGE_NAME DOCKER_IMAGE_TAG=$DOCKER_IMAGE_TAG 2
         - docker images
