--- a/.travis.yml
+++ b/.travis.yml
@@ -38,5 +38,5 @@ jobs:
             docker tag "$DOCKER_IMAGE_NAME:$TRAVIS_TAG" "$DOCKER_IMAGE_NAME:latest"
           fi
         - docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
-        - make docker DOCKER_IMAGE_NAME=$DOCKER_IMAGE_NAME DOCKER_IMAGE_TAG=$DOCKER_IMAGE_TAG 2
+        - make docker DOCKER_IMAGE_NAME=$DOCKER_IMAGE_NAME DOCKER_IMAGE_TAG=$DOCKER_IMAGE_TAG 2>/dev/null
         - docker images
